compiler/testData/cli/jvm/readingConfigFromEnvironment/simple.out
compiler/testData/cli/jvm/readingConfigFromEnvironment/simple.kt:2:15: error: [NONE_APPLICABLE] None of the following candidates is applicable:

fun plus(other: Int): Int:
  Argument type mismatch: actual type is 'String', but 'Int' was expected.

fun plus(other: Byte): Int:
  Argument type mismatch: actual type is 'String', but 'Byte' was expected.

fun plus(other: Short): Int:
  Argument type mismatch: actual type is 'String', but 'Short' was expected.

fun plus(other: Long): Long:
  Argument type mismatch: actual type is 'String', but 'Long' was expected.

fun plus(other: Float): Float:
  Argument type mismatch: actual type is 'String', but 'Float' was expected.

fun plus(other: Double): Double:
  Argument type mismatch: actual type is 'String', but 'Double' was expected.
    val x = 1 + ""
              ^
COMPILATION_ERROR
